fix: custom-cursor visibility

--- a/narratiffffchiki/styles.css
+++ b/narratiffffchiki/styles.css
@@ -4,7 +4,6 @@
 :root{
     --main: #c6252e;
     --blue: #000080;
-    --cursor: url(img/cursor/normal.png);
 }
 
 *{
@@ -12,6 +11,27 @@
     padding: 0;
     list-style: none;
     font-family: 'FreePixel';
+}
+
+html, body, a, button, [cursor="pointer"], .track-list, .track-list * {
+    cursor: none !important;
+}
+
+#cursor {
+    position: fixed;
+    width: 32px;
+    height: 32px;
+    pointer-events: none;
+    z-index: 9999;
+    background-image: url('img/cursor/normal.png');
+    background-size: cover;
+    transform: translate(-50%, -50%);
+    transform: translate(-11px, -8px);
+    transition: transform 0.1s ease-out;
+}
+
+#cursor.pointer {
+    background-image: url('img/cursor/select.png');
 }
 
 ::-moz-selection{
@@ -105,8 +125,8 @@ body{
     margin: 0 auto;
     width: 600px;
     background: rgb(226, 226, 226);
-    cursor: var(--cursor), auto;
     background-position: center;
+    overflow-x: hidden;
 }
 a:hover, .track:hover{
     cursor: pointer;
@@ -255,7 +275,6 @@ main{
     border: 2px ridge #240709;
     margin: 2px;
     filter: drop-shadow(1px 1px 1px);
-    cursor: var(--cursor), auto;
 } 
 .volume_slider::-webkit-slider-thumb {
     -webkit-appearance: none;
@@ -288,7 +307,6 @@ main{
     border: 2px ridge #240709;
     margin: 5px 2px 10px 2px;
     filter: drop-shadow(1px 1px 1px);
-    cursor: var(--cursor), auto;
 } 
 .seek_slider::-webkit-slider-thumb {
     -webkit-appearance: none;
@@ -548,10 +566,6 @@ main{
     background: url(img/gifs/cd.gif);
     background-size: contain;
     margin: 0 10px 0 0;
-}
-
-input{
-    cursor: var(--cursor), auto;
 }
 
 footer{
